--- a/elbow_bump_frontend/package.json
+++ b/elbow_bump_frontend/package.json
@@ -13,7 +13,8 @@
     "primevue": "^3.3.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.11",
