--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^7.21.0",
     "eslint-plugin-vue": "^7.7.0",
     "node-sass": "^5.0.0",
+    "raw-loader": "^4.0.2",
     "sass-loader": "^10.1.1",
     "scss-loader": "0.0.1"
   },
