--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "core-js": "^3.9.1",
+    "flickity": "^2.2.2",
+    "markdown-it": "^12.0.4",
     "postcss": "^8.2.8",
     "primeicons": "^4.1.0",
     "primevue": "^3.3.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.3",
+    "vue-tweet-embed": "^2.4.0",
     "vuex": "^4.0.0",
     "vuex-persistedstate": "^4.0.0-beta.3"
   },
