--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postcss": "^8.2.8",
     "primeicons": "^4.1.0",
     "primevue": "^3.3.4",
+    "quill": "^1.3.7",
     "vue": "^3.0.0",
     "vue-router": "^4.0.3",
     "vue-tweet-embed": "^2.4.0",
