--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^3.0.2",
     "core-js": "^3.9.1",
     "flickity": "^2.2.2",
     "markdown-it": "^12.0.4",
