--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.9.1",
     "flickity": "^2.2.2",
     "markdown-it": "^12.0.4",
+    "markdown-it-emoji": "^2.0.0",
     "postcss": "^8.2.8",
     "primeicons": "^4.1.0",
     "primevue": "^3.3.4",
